deploy/develop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: develop-app
  namespace: develop
  labels:
    app: develop-app
    group: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: develop-app    # indicates which Pods (with which labeles) need be handled by this Deployment
  template:
    metadata:         # indicates the metadata that will be added to each Pod
      labels:
        app: develop-app
        group: db
    spec:
      containers:     # defines a running container inside the Pod
        - name: develop-app
        # TODO: update the image
          image: adminer:4.7.6-standalone
          ports:
            - containerPort: 8080   # which port of the container is exposed to the Pod
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
              

# kubectl apply -f deploy/develop-deployment.yaml
# kubectl get deployments
# kubectl describe deployment develop
# kubectl get pods --namespace=develop
# kubectl describe pod name-of-pod
