deploy/develop-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: develop-mysql
  namespace: develop
  labels:
    app: develop-mysql
    group: db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: develop-mysql
  template:
    metadata:
      labels:
        app: develop-mysql
        type: db
    spec:
      volumes:                         # indicates which PVC are available for this Deployment
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: develop-mysql-persistent-volume-claim
      containers:
        - image: mysql:8.0
          name: develop-mysql
          ports:
            - containerPort: 3306
          volumeMounts:                 # indicates which Volume (from spec.template.spec.volumes) should be used
            - name: mysql-persistent-storage        # name of the Volume
              mountPath: /var/lib/mysql   # path inside the container
          resources:
            limits:
              memory: "512Mi"
              cpu: "1500m"

# kubectl apply -f deploy/develop-mysql-deployment.yaml 
# kubectl get deployments --namespace=develop
# kubectl describe deployment develop
# kubectl get pods --namespace=develop
# kubectl describe pod name-of-pod
