deploy/develop-mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: develop-mysql
  namespace: develop
  labels: 
    group: db
spec:
  type: ClusterIP
  selector:             
    app: develop-mysql
  ports:
    - port: 3306  
      targetPort: 3306


# kubectl apply -f deploy/develop-mysql-svc.yaml
