deploy/develop-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: develop-app
  namespace: develop
  labels: 
    group: db
spec:
  type: ClusterIP
  selector:             # indicates into which pods ClusterIP provides access
    app: develop-app
  ports:
    - port: 8080          # port exposed outside ClusterIP
      targetPort: 8080    # port exposed by Pod



# kubectl apply -f deploy/develop-svc.yaml
# kubectl get svc --namespace=develop
# kubectl describe svc develop
