deploy/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: develop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: develop-brackets.k8.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: develop-app
                port:
                  number: 8080

# kubectl apply -f deploy/ingress-controller.yaml
